--- a/package.json
+++ b/package.json
@@ -11,8 +11,14 @@
   "dependencies": {
     "@clerk/nextjs": "^6.8.0",
     "@prisma/client": "^6.0.1",
+    "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-progress": "^1.1.0",
+    "@radix-ui/react-scroll-area": "^1.2.1",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.1",
     "@t3-oss/env-core": "^0.11.1",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
